# trunk

./: .envrc  .gitignore  404.html  CNAME  CODEOWNERS  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
cli/: .gitignore  Cargo.toml  README-DEV.md  README.md
cli/cli/: index.html
cli/cli_cmnds_build/: index.html
cli/src/: config.rs  control_file.rs  main.rs  manifest.rs  retry.rs  semver.rs  sync_utils.rs  trunk_toml.rs  tui.rs  v1.rs
cli/tests/: .gitignore  integration_tests.rs
registry/: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile  postgresql.conf  sqlx-data.json
registry/.sqlx/: query-002d293c501005c025256289cb7ef4f89f767c53ad62a544b68cb7e8f6750c96.json  query-00e47bbd59d3b7c8bf522874ee92efe5d929da89c7a810d6ecda63f91aace768.json  query-0a50fee432e167aa3029cebb8c6393ec5ef754131301b698199a4fefa43e2e33.json  query-12ce7de3da92187f4468a89f5e1795da2b0471f90373200a5870448dae264aa0.json  query-13f5a1bc9134e46f5afd23f334b270a5e0daccd7021955c708aa1554d7aa1b05.json  query-152d01b0e157fa58129e96f5bd3e7536e393feb12f12adcafadbabebd0918fa9.json  query-1d305b40cb84e8ed2a3f1ed57a9bc8375387a13936128bf91ae5f30e0ee75d5e.json  query-1dee7b02e97b471263351d60ab6a3d8a2fe83a4113749e037d246df718457925.json  query-246a9f7369555b2fbedcc5db3ac5a84ce5c889b227095a07e420b7b0b4a3ea3b.json  query-248a5a4eece6a88e283e65a41eee6d11e9010ab4c2d815c7cc39cc09ae813a67.json  query-2898d7f3b57a07860872d2675506faf25583f041b6862d77a3e6fab1dc54d847.json  query-293879a01947fadc812b0a4edd6e128a33917c8cd66cc4844c1101e95163c0c3.json  query-2aa8ecff6be8c81144a148b7186424971aba6c06382692a0b26e37b03d68bce8.json  query-2ecd97b9bf16c6fdbd6fd96122fb24930ffd0c2fc978fd73af9e89847bf92e03.json  query-322f076984933b14a9c5c813ecdd955684ca03f47dfa6b5fec3bd86dbd8edba1.json  query-32bf8a72aba8e810d4f1303ea516056784356965be367ec8427c5dd374ea937e.json  query-36bc3613b2f0f2bf8347edc3ddc1c117a164f45f16195ff92c05f2eb764779bd.json  query-399e2d821efc414f5ec8e274d588b6e67fbfcb1366d2f637bc6f111d9b778b41.json  query-3d97358d04299f979123dc42ac48c1dfa5bffb9f042288edd43d43a9c7fec68c.json  query-3ef18da25f5c0eeee1c92761e66a68d3733eb17380b5c1863097843fdeef0c1e.json  query-49a41631cfe21efe58022e6e4026e6f3d388d8bb12ac478dbf30addab78d430e.json  query-4b2365bc80293846957f284d63c2d23a2ac6d2e3629e1f836f12c0eca2dd4339.json  query-4ba793c5e681f2bec3e50c82ab9ec580a7f76660cee45f585a368758266b781d.json  query-4db2be5140f4d7c0edebcf62616e8ce97c5479134580a654727fbe4a83435319.json  query-5650cfabaad409805e475fa8677e93ee489ee6e2f95d811635ec6b6ffbcce688.json  query-68d793399afe7fff28bd42fa91c4d25389eb5e90a451694d779ef8a8f1125de0.json  query-6991d9aae9d130b3d209ea5816847f661979e07c07f754c15e9b05eee3d61cb6.json  query-69ef7c7c79e69f31731a41417a0047562f0806a7c73eb4bb98c9ed554fff3b7c.json  query-6d236366a29a5dac43d66e0be6e074372fa56b2ef1bac0e375af204c1a43a3f2.json  query-6fb00641c96791a0649d1d9de69f71f87e00eca5661ad53b234b19fd1d8e7ef9.json  query-72250de71fdc4e1f66965a25bd6ebf5f4ea5566013706b61c0ba028367102a98.json  query-756737edb5733514dcb510266ab577703d9cf4cb7f61702d7a4a15962fc8ae87.json  query-79e13abe94a7d583d810c88d18272123f18672525f3d83254069b0979c35583b.json  query-7a931ec93bcc1516737bfc65fd24b339401996a7f23891c7770a3b5b5c79ffc2.json  query-7c0f23131094cf9610841295fd1d44733450affe0f01d42e55204419cd376f7a.json  query-7d372fca1ed8b3cd12573033e0329361636b95ffb41b9e13be2844755ab37a75.json  query-7fa6e9c87a3295c5e95d71b9cad78194203613d041aea85816a4a71c3f4ac3df.json  (+21 more)
registry/registry/: index.html
src/: main.rs  (+2 more)
(+796 files in other folders)
