[package]
name = "pg-trunk"
version = "0.12.1"
edition = "2021"
authors = ["Steven Miller", "Ian Stanton", "Vinícius Miguel"]
description = "A package manager for PostgreSQL extensions"
homepage = "https://pgt.dev"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tembo-io/trunk"

[[bin]]
name = "trunk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
async-recursion = "1.0.4"
async-trait = "0.1.64"
bollard = "0.14.0"
clap = { version = "4.1.1", features = ["derive"] }
colorful = "0.2.2"
duct = "0.13.6"
elf = "0.7.2"
env_logger = "0.10.0"
flate2 = "1.0.25"
fs-err = "2.9.0"
futures-util = "0.3.26"
glob = "0.3.1"
hyper = "0.14.24"
ignore = "0.4.20"
log = "0.4.20"
rand = "0.8.5"
read-write-pipe = "0.1.0"
reqwest = { version = "0.11.16", features = ["multipart", "json"] }
semver = "1.0.16"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
similar = "2.3.0"
slicedisplay = "0.2.2"
tar = "0.4.38"
tee_readwrite = "0.1.0"
tempfile = "3.4.0"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
tokio-stream = "0.1.12"
tokio-task-manager = "0.2.0"
toml = "0.7.2"
which = "4.4.0"

[dev-dependencies]
assert_cmd = "2.0.8"
git2 = "0.17.0"
predicates = "2.1.5"
