[package]
name = "trunk-registry"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
base64 = "0.21.0"
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
anyhow = "1.0.69"
sqlx = { version = "0.6.2", features = [ "chrono", "json", "runtime-tokio-native-tls" , "postgres", "time", "offline" ] }
url = "2.3.1"
thiserror = "1.0.39"
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.154", features = ["derive"] }
futures = "0.3.26"
serde_json = "1.0.94"
chrono = { version = "0.4.23", features = [ "serde" ] }
dotenv = "0.15.0"
env_logger = "0.10.0"
reqwest = "0.11.14"
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.0"
clerk-rs = "0.1.8"
rand = "0.8.5"
sha2 = "0.10.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
nom = "7.1.3"
aho-corasick = "1.1.2"
utoipa = { version = "4.0.0", features = ["actix_extras"] }
utoipa-redoc = { version = "1.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
tar = "0.4.40"
flate2 = "1.0.28"
bytes = "1.5.0"
sha256 = "1.4.0"
