[package]
name = "test_pgrx_extension"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg_test = []

[dependencies]
pgrx = "=0.8.0"

[dev-dependencies]
pgrx-tests = "=0.8.0"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
